test/commands/scan/tf-ecs-service/01-out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- required-latest-platform-fargate / required-latest-platform / (unknown) PASSED
Done
