test/commands/scan/tf-ecs-service/01-policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: required-latest-platform-fargate
spec:
  rules:
    - name: required-latest-platform
      match:
        any:
        - type: aws_ecs_service
          values:
            launch_type: FARGATE
      context:
      - name: pv
        variable: platform_version
      assert:
        all:
        - message: "ECS Fargate services should run on the latest Fargate platform version"
          check: 
            values:
              platform_version: 'LATEST'
