test/commands/scan/tf-ecs-service/02-out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- ecs-public-ip / ecs-public-ip / (unknown) PASSED
Done
